# experimental

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  calculator.proto  cmd  envoy.yaml  go.mod  go.sum  maven_install.json  package-lock.json  package.json  server1.go  tap_config.yaml
client/: BUILD.bazel  client.js  index.html  package.json  rollup.config.js
client/google/api/: annotations_pb.js
proto/: BUILD.bazel  calculator.proto
server1/: BUILD.bazel  server1.go
server1/client/: BUILD.bazel  calculator_client.go
server2/: BUILD.bazel  server2.go
wasm/: BUILD.bazel  cmd  index.html
