load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/example/project
gazelle(name = "gazelle")

proto_library(
    name = "calculatorpb_proto",
    srcs = ["calculator.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "calculatorpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/vinayreddy/experimental/calculatorpb",
    proto = ":calculatorpb_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_binary(
    name = "server1",
    srcs = ["server1.go"],
    importpath = "github.com/vinayreddy/experimental",
    visibility = ["//visibility:public"],
    deps = [
        ":calculatorpb_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_binary(
    name = "server2",
    srcs = ["server2.go"],
    importpath = "github.com/vinayreddy/experimental",
    visibility = ["//visibility:public"],
    deps = [
        ":calculatorpb_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_library(
    name = "project_lib",
    srcs = [
        "server1.go",
        "server2.go",
    ],
    importpath = "github.com/example/project",
    visibility = ["//visibility:private"],
    deps = [
        ":calculatorpb_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
