load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "calculatorpb_proto",
    srcs = ["calculator.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "calculatorpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/vinayreddy/experimental/calculatorpb",
    proto = ":calculatorpb_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "calculatorpb",
    embed = [":calculatorpb_go_proto"],
    importpath = "github.com/vinayreddy/experimental/calculatorpb",
    visibility = ["//visibility:public"],
)
