load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@npm//@bazel/labs:index.bzl", "ts_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@com_github_grpc_grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library")

proto_library(
    name = "calculatorpb_proto",
    srcs = ["calculator.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "calculatorpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/vinayreddy/experimental/calculatorpb",
    proto = ":calculatorpb_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "calculatorpb",
    embed = [":calculatorpb_go_proto"],
    importpath = "github.com/vinayreddy/experimental/calculatorpb",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "calculator_ts_proto",
    proto = "calculatorpb_proto",
    visibility = ["//client:__pkg__"],
)

java_proto_library(
    name = "calculator_java_proto",
    deps = ["calculatorpb_proto"],
)

java_grpc_library(
    name = "calculator_grpc_java_proto",
    srcs = [":calculatorpb_proto"],
    deps = [":calculator_java_proto"],
)

kt_jvm_grpc_library(
    name = "calculator_kt_proto",
    srcs = ["calculatorpb_proto"],
    deps = ["calculator_java_proto"],
)
