load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server1_lib",
    srcs = ["server1.go"],
    importpath = "github.com/example/project/server1",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:calculatorpb",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_binary(
    name = "server1",
    embed = [":server1_lib"],
    visibility = ["//visibility:public"],
)
