load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server2_lib",
    srcs = ["server2.go"],
    importpath = "github.com/example/project/server2",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:calculatorpb",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server2",
    embed = [":server2_lib"],
    visibility = ["//visibility:public"],
)
