load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "wasm_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/wasm",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "wasm",
    embed = [":wasm_lib"],
    visibility = ["//visibility:public"],
)
